tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions02(target=es5).errors.txt
//// [tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInRegularExpressions02.ts] ////

unicodeExtendedEscapesInRegularExpressions02.ts(1,18): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


==== unicodeExtendedEscapesInRegularExpressions02.ts (1 errors) ====
    var x = /\u{00}/gu;
                     ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    